@@ -3,7 +3,7 @@
 lib.slf4j.rev=1.5.11
 lib.spring.rev=2.5.6
 lib.generic-commons-collections.rev=4.01
-lib.hsqldb.rev=1.8.0.9
+lib.hsqldb.rev=1.8.0.10
 lib.acegi.rev=1.0.7
 lib.junit.rev=4.8.1
 lib.cagrid.rev=1.2
@@ -14,9 +14,9 @@ lib.dbunit.rev=2.2
 lib.hibernate.rev=3.3.1.GA
 lib.hibernate-annotations.rev=3.4.0.GA
 
-lib.servlet.rev=2.5.0
+lib.servlet.rev=2.5
 lib.jsp.rev=2.1.0
 
-lib.jakarta-commons.lang.rev=2.4.0
-lib.jakarta-commons.io.rev=1.4.0
+lib.jakarta-commons.lang.rev=2.4
+lib.jakarta-commons.io.rev=1.4
 lib.jakarta-commons.dbcp.rev=1.2.2.osgi
